--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.cdh</groupId>
     <artifactId>apitaller</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>apilibreria</name>
-    <description>apilibreria</description>
+    <name>apitaller</name>
+    <description>apitaller</description>
     <url/>
     <licenses>
         <license/>
@@ -32,12 +32,27 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>21.0.1</version> <!-- pon aquí la versión que corresponda -->
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-client</artifactId>
+            <version>6.4.2</version> <!-- O la versión que estés usando -->
+        </dependency>
+
 
         <dependency>
             <groupId>com.mysql</groupId>
@@ -49,6 +64,24 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId> <!-- Opcional, si usas seguridad -->
+        </dependency>
+
+        <!-- Para manejo de JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <!-- Para hacer peticiones HTTP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
