--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,14 @@
 spring:
+  web:
+    resources:
+      static-locations:
+        - classpath:/static/
+        - file:uploads/
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   application:
     name: ApiTaller
 
